[package]
name = "rustyos"
version = "0.1.0"
edition = "2021"
authors =  ["Gyanendra Shukla <gyanendra.shukla@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# The profile used for `cargo build` i.e. dev build
[profile.dev]
panic = "abort" # Disable stack unwinding on panic

# The profile used for `cargo build --release` i.e. release build
[profile.release]
panic = "abort" # Disable stack unwinding on panic

